[gd_scene load_steps=10 format=3 uid="uid://rqce7v87kkf2"]

[ext_resource type="Script" path="res://Scripts/Options.gd" id="1_c8gw5"]
[ext_resource type="Texture2D" uid="uid://w4uevn7obhnj" path="res://assets/background/Free Pixel Art Forest/Preview/Background.png" id="2_jwc3s"]
[ext_resource type="Texture2D" uid="uid://b0onh4u7brqtk" path="res://Vid/right-arrow.png" id="4_w2ecv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hxm8"]
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5pmjd"]
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hnqgy"]
bg_color = Color(0.838897, 0.838897, 0.838897, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kkhjo"]
bg_color = Color(0.58787, 0.607684, 0.578067, 1)
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_xubfx"]
Button/styles/disabled = SubResource("StyleBoxFlat_0hxm8")
Button/styles/focus = SubResource("StyleBoxFlat_5pmjd")
Button/styles/hover = SubResource("StyleBoxFlat_hnqgy")
Button/styles/normal = SubResource("StyleBoxFlat_kkhjo")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rjink"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c8gw5")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.862745)
position = Vector2(578, 201.25)
scale = Vector2(1.24353, 1.128)
texture = ExtResource("2_jwc3s")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -220.0
offset_right = 190.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Volume"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Mute"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Resolution" type="OptionButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(380, 50)
layout_mode = 2
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="add_q" type="Button" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 399.0
offset_right = 771.0
offset_bottom = 454.0
theme_override_font_sizes/font_size = 30
text = "Add questions"

[node name="Button" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 82.0
offset_top = 639.0
offset_right = 156.0
offset_bottom = 697.0
rotation = 3.14159
theme = SubResource("Theme_xubfx")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_rjink")
icon = ExtResource("4_w2ecv")
icon_alignment = 1

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="pressed" from="add_q" to="." method="_on_add_q_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
